--- a/src/CodeGeneration/CodeGeneration.csproj
+++ b/src/CodeGeneration/CodeGeneration.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="RazorEngineCore" Version="2021.3.1" />
     <PackageReference Include="Mono.TextTemplating" Version="2.2.1" />
+    <PackageReference Include="Scriban" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +18,10 @@
     </Content>
     <None Remove="Templates\PersonRunTime.xsl" />
     <Content Include="Templates\PersonRunTime.xsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Remove="Templates\PersonRunTime.liquid" />
+    <Content Include="Templates\PersonRunTime.liquid">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
