--- a/src/CodeGeneration/CodeGeneration.csproj
+++ b/src/CodeGeneration/CodeGeneration.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="RazorEngineCore" Version="2021.3.1" />
     <PackageReference Include="Mono.TextTemplating" Version="2.2.1" />
     <PackageReference Include="Scriban" Version="4.0.1" />
+    <PackageReference Include="Stubble.Core" Version="1.9.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +23,10 @@
     </Content>
     <None Remove="Templates\PersonRunTime.liquid" />
     <Content Include="Templates\PersonRunTime.liquid">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Remove="Templates\PersonRunTime.mustache" />
+    <Content Include="Templates\PersonRunTime.mustache">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
